# transitive-rs

./: Cargo.toml  requests.http
src/: main.rs
