[package]
name = "transitive-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
awc = { version = "3.7.0", features = ["rustls-0_23"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0"
log = "0.4"
rustls = "0.23"
rustls-platform-verifier = "0.6"
serde_urlencoded = "0"
